syntax = "proto3";

package customers;

service CustomerService {
    rpc CreateCustomer(CreateCustomerRequest) returns (CreateCustomerResponse) {}
    rpc CustomerDetails(CustomerDetailsRequest) returns (CustomerDetailsResponse) {}
}

message CreateCustomerRequest {
    string name = 1;
    string documentNumber = 2;
    CreateAddressRequest address = 3;
}

message CreateAddressRequest {
    string postalCode = 1;
    string lineAddress = 2;
    string city = 3;
    string state = 4;
}

message CreateCustomerResponse {
    int32 status = 1;
    repeated string error = 2; 
    string id = 3;
}

message CustomerDetailsRequest {
    string id = 1;
}

message CustomerDetailsResponse {
    int32 status = 1;
    repeated string error = 2; 
    string id = 3;
    string name = 4;
    string documentNumber = 5;
    AddressCustomerDetailsResponse address = 6;
}

message AddressCustomerDetailsResponse {
    string postalCode = 1;
    string lineAddress = 2;
    string city = 3;
    string state = 4;
}

message BadRequestResponse {
    int32 statusCode = 1;
    string message = 2;
    string error = 3;
}